2005-12-21  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/elem.scm
	fixed node-list-to-node-set and node-set: bug.

2005-12-19  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added x-kahua-path-full-info to worker context.
	Now, worker can get worker name and entry name by
	(kahua-context-ref "x-kahua-path-full-info").
	Added kahua-current-entry-name.

2005-12-18  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* emacs/kahua-shell.el.in (run-kahua-shell): add -t option with ssh.

2005-12-18  Katsutoshi Itoh  <cut-sea@kahua.org>

	* add keywords :multi-value-keyword and :mvkeyword.
	  These are used for keyword which get many values from context.

2005-12-18  Katsutoshi Itoh  <cut-sea@kahua.org>

	* entry-lambda's keyword can get multiple values from context.
	  So, we can remove kahua-context-ref* from *.kahua.
	  kahua framework bind keyword single value or list of values.
	  When multiple values posted, keyword is binded by values of list.
	  and another case, single value posted, keyword is binded by a value.

2005-11-26  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed kahua-serializable-object? to return #t for null list.

2005-11-12  ENDO Yasuyuki

	* src/kahua/persistence.scm:
	  check Gauche-dbi 0.2 and later in read-kahua-instance and write-kahua-instance.

2005-11-03  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	supported class redefine.
	changed to use slot-*-using-class in primitive procedure.
	added change-class method to <kahua-persistnet-base>.
	* test/persistence.scm.in:
	fixed key duplicate.

2005-10-16  Kenji Hisazumi  <nel@soraneko.com>

	* plugins/sendmail.scm:
	fixed for the case if the default encoding is not "eucjp".

2005-10-12  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* Release 0.3.4
	- Known Bugs: kahua-spvr will dead-locks some situation.

2005-10-06  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm: